# Ros2MotionPlanning

./: CMakeLists.txt
config/: bridge_parameters.yaml  control.yaml
include/kdl_ros_control/: kdl_planner.h  kdl_robot.h  utils.h
launch/: robot_description.launch.py
src/: TrajTracking_test.cpp  kdl_control.cpp  kdl_package_testing.cpp  kdl_planner.cpp  kdl_robot.cpp  kdl_trajectory_test.cpp  kin_inv_test.cpp
urdf/: panda_ros2.urdf
